--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,8 +11,8 @@ set(CMAKE_CXX_FLAGS "-std=c++11")
 find_package(OpenGL REQUIRED)
 find_package(GLEW REQUIRED)
 if (GLEW_FOUND)
+  message("we found glew ${GLEW_INCLUDE_DIRS}, ${GLEW_LIBRARIES}")
     include_directories(${GLEW_INCLUDE_DIRS})
-    link_libraries(${GLEW_LIBRARIES})
 endif()
 
 #link_directories("C:/vcpkg/installed/x86-windows/lib")
@@ -30,5 +30,10 @@ include_directories(deps/includes)
 include_directories(deps)
 target_link_libraries(BoatSimulation shp)
 target_link_libraries(BoatSimulation ${OPENGL_LIBRARIES})
-target_link_libraries(BoatSimulation glew32)
+if (GLEW_FOUND)
+  target_link_libraries(BoatSimulation ${GLEW_LIBRARIES})
+else()
+  target_link_libraries(BoatSimulation glew)
+endif()
+
 
